HADOOP-19219. Add JPMS options required by hadoop-common